[package]
name = "pcap_test"
description = "Capture TCP traffic, reconstruct the connections, and follow their states"
version = "0.1.0"
edition = "2021"
authors = ["Eyal Zohar <eyalzo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17" }
env_logger = "0.9.0"
pcap = { version = "0.9.2" }
etherparse = "0.12.0"
clap = { version = "3.2.16", features = ["derive"] }
